Fixed table overflowing horizontally

--- a/src/scss/pages/_Log.scss
+++ b/src/scss/pages/_Log.scss
@@ -8,6 +8,6 @@
 
 @import '../abstracts/variables';
 
-.log-footer {
+.jf-log-footer {
     background-color: $main-theme-secondary-color;
 }
